feat: add get all products by filter
