# internal/dtos/product-response-dto.go
@@ -5,3 +5,7 @@ import "github.com/hitaloose/go-products-api/internal/models"
 type ProductResponseDto struct {
 	Product *models.Product `json:"product"`
 }
+
+type ProductsResponseDto struct {
+	Products []*models.Product `json:"products"`
+}
